<resources>
    <string name="app_name">FitElevate</string>
    <string name="app_theme">Elevate your fitness</string>
    <string name="signup_message">Please Signup to create your account</string>
    <string name="login_message">Please login to your account</string>
    <string name="tncmessage">Our Terms &amp; Conditions</string>
    <string name="welcomeTo">Welcome</string>
    <string name="contdes">fitelevate</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="signup">SignUp</string>
    <string name="signin">Sign In</string>
    <string name="alreadymember">already a member?</string>
    <string name="donthaveac">Dont have an account? </string>
    <string name="signup_text">By signing up you agree with our term and conditions</string>
    <string name="forgotpass_message">Forgot Password</string>
    <string name="forgot_message">Forgot Password? </string>
    <string name="goback">Go back to  </string>
    <string name="steps"> &amp; Steps  </string>
    <string name="walk">  Walk  </string>
    <string name="water">Water </string>
    <string name="sleep">Sleep  </string>
    <string name="heart">Heart  </string>
    <string name="calories">Calories  </string>
    <string name="bmi">BMI  </string>
    <string name="bmr">BMR  </string>
    <string name="exercise">Exercise  </string>
    <string name="training">Training </string>
    <string name="yoga">Yoga  </string>
    <string name="home">Home  </string>
    <string name="search">Search  </string>
    <string name="activity">Activity </string>
    <string name="account">Account </string>
    <string name="login">login </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_login_with">or login with</string>
    <string name="textview">TextView</string>
    <string name="exerciseany">Any exercise</string>
    <string name="jumpingjacksdes">Start with your feet together and your arms by your sides,then jump up with your feet apartand your hands overhead.Return to the start position then do the next rep.This exercise provides a full body workout and works all your large muscle groups.</string>
    <string name="squatkicksdes">Stand with your feet shoulder width apart. Put your arms in front of your chest to keep your balance.Then do a squat, and when you come up, kick your left leg to the front. Repeat the exercise and then switch to the right leg.Inhale when you go down, and exhale when you go up. It\'s a great exercise for the quadriceps and gluteus maximus.</string>
    <string name="pushupsdes">Lay prone on the ground with arm supporting your body.Keep your body straight while raising and lowering your body with your arms.This exercise works the chest, shoulders, triceps, back and legs.</string>
    <string name="reversecrunchesdes">Lie on your back with your knees up at 90 degree angle and your hands behind your head.Lift your upper body and thighs, and then stretch out. Repeat this exercise.</string>
    <string name="squatreachupsdes">Stand with your feet a little wider than shoulder width apart, elbows bent, palms facing each other and fingers pointed toward the ceiling.Lower your body until your thighs are parallel to the floor. When you come up, turn your body to the left, straighten your right leg, lift your right heel and stretch and reach your right arm to the left.Return to the start position, and repeat with the other side.</string>
    <string name="inchwarmsdes">Start with your feet shoulder width apart.Bend your body and walk your hands in front of you as far as you can, then walk your hands back. Repeat this exercise.</string>
    <string name="frogpressdes">Lie on your bed with your legs lifted, knees bent and heels squeezed together. Put your arms flat at your sides.Straighten your legs and bring them back to the starting position. Repeat the exercise.</string>
    <string name="lungesdes">Stand with your feet shoulder width apart and your hands on your hips.Take a step forward with your right leg and lower your body until your right thigh is parallel with the floor.Then return and switch to the other leg. This exercise strengthens the quadriceps, gluteus maximus and hamstrings.</string>
    <string name="squatsdes">Stand with your feet shoulder width apart and your arms stretched forward, then lower your body until your thighs are parallel with the floor.Your knees should be extended in the same direction as you toes. Return to the start position and do the next rep.This works the thighs, hips, buttocks, quartz hamstrings and lower body.</string>
    <string name="legraisesdes">Lie down on your back, and put your hands beneath your hips for support.Then lift your legs up until they fall on right angle with the floor.Slowly bring your legs back down and repeat the exercise.</string>
    <string name="bentoverrowdesc">Stand with your feet shoulder width apart. Lean forward, slightly bend your knees and sit your hips back. Hold a dumbbell in each hand.Bend your elbows, and pull them backward. Lower your hands, and repeat the exercise.</string>
    <string name="dumbbellchestflydesc">Lie on your bed with your knees bent and your feet flat on the floor.Hold a dumbbell in each hand, and raise your arms towards the ceiling with your palms facing each other and your elbows slightly bent.Lower the dumbbells out to the sides unit your upper arms touch the floor. Return and repeat the exercise.</string>
    <string name="dumbbellfrontraisedesc">Stand on the floor, and hold a dumbbell in each hand.Raise your arms straight forward at shoulder height, then lower them down. Repeat the exercise.</string>
    <string name="dumbbellkickbacksdesc">Stand upright, hold a dumbbell in each hand by your sides.Lean forward, and bend your knees slightly. Bend your elbows, and bring the dumbbells towards your chest.Extend your arms behind you, and squeeze your triceps.Bring the dumbbells back to your chest. Repeat the exercise.</string>
    <string name="dumbbellswingsdesc">Stand with your feet a little wider than shoulder-width apart. Slightly bend your knees. Hold a dumbbell vertically with both hands.Bend at your hips and lower your upper body until it’s at a 45 degree angle to the floor, and swing the tumble bag between your knees.Then drive your hips forward and swing the dumbbell to your chest height. Repeat the exercise.</string>
    <string name="dumbbellsquatsdesc">Hold a dumbbell in each hand at your sides.Stand with your feet shoulder width apart, then lower your body until your thighs are parallel with the floor.Your knee should be extended in the same direction as your toes. Return to the start position and do the next rep.This works the thighs, hips buttocks, quads, hamstrings and lower body.</string>
    <string name="dynamicchestdesc">Stand on the floor with your feet shoulder width apart. Extend your arms forward at shoulder height with your palms facing each other.Extend your arms as far out as possible, then move them back to the front. Repeat the exercise.</string>
    <string name="militarypressdesc">Stand with your feet a little wider than your shoulders. Hold a dumbbell in each hand.Raise and bend your arms at 90 degree angles to your sides, keep your upper arms parallel to the floor and palms facing forward.Slowly raise your hands over your head, then slowly bring them down. Repeat the exercise.</string>
    <string name="militarypushupsdesc">Start in a push-up position with your hands directly under your shoulders and feet no more than 12 inches apart.Bend your elbows and lower your body until your upper arms are parallel to the floor. Stay in this position for one second and then push your body back to the starting position and repeat the exercise. Please remember that your elbows should be close to your body during this exercise.</string>
    <string name="standingdumbbellcurldesc">Stand with your feet shoulder width apart. Hold a dumbbell in each hand.Extend your arms and place them in front of your body with palms facing forward.Bend your arms and raised the dumbbells to your shoulders, then lower them. Repeat the exercise.</string>
    <string name="str1">Sit and cross your legs on the mat. Lift your left arm overhead, and put your right hand on the floor for support.Look up at your left hand, and slowly band your right arm; meanwhile, brand your upper body to the right. Hold it for a few seconds.Switch sides and repeat.</string>
    <string name="str2">Start on all fours with your knees under your butt and your hands directly under your shoulders.Then Take a breath and make your belly fall down, shoulders roll back and head come up towards the ceiling.As you exhale, curve your back upward and let your head come down. Repeat the exercise.Do it slowly with each step of this exercise.</string>
    <string name="str3">Start with your knees and hands on the floor. Put your hands are little forward, widen your knees and put your toes together.Take a breath, then exhale and sit back. Try to make your butt touch your heels. Relax your elbows, make your forehead touch the floor and try to lower your chest close to the floor. Hold this position.Keep your arms stretched forward as you sit back. Make sure there is enough space between your shoulders and ears during the exercise.</string>
    <string name="str4">Start on all fours with your hips up in an upside down “V” shape. Alternatively lift and lower your heels.</string>
    <string name="str5">Lie down on your stomach and bend your elbows with your hands beneath your shoulders.Then push your chest up off the ground as far as possible. Hold this position for seconds.</string>
    <string name="str6">Lie down on your back with your legs extended.Bend your knees and bring them up toward your chest; hug your knees with both hands. Hold for a few seconds.</string>
    <string name="str7">Stand on the floor with your feet together.Then bend your body and bring your upper body as close to your legs as you can.Hold this position for a few seconds and repeat.Exhale when you bend your body and inhale when you come up. Keep your legs straight during the exercise.</string>
    <string name="str8">Stand with your thighs closed, and raise your hands over your head.Then bend your knees and come to a sitting position.Bend your torso forward slightly and extend your arms forward to keep your balance. Hold this position till time’s up .</string>
    <string name="str9">Place one arm across your body, parallel to the ground, then use the other arm to pull the parallel arm towards your chest.Hold for a while, switch arms and repeat the exercise. Keep the inside arm straight during the exercise.
</string>
    <string name="str10">Lie on the floor with your legs extended. Lift your left knee up and grab it with both hands.Pull your left leg towards your chest as much as you can while keeping your right leg straight on the ground.Hold this position for a few seconds. Switch sides and repeat.</string>
    <string name="title_activity_breathing_yoga">breathingYoga</string>
    <string name="pursedlipbreathingdesc">Relax your neck and shoulders.Keeping your mouth closed, inhale slowly through your nose for 2 counts.Pucker or purse your lips as though you were going to whistle.Exhale slowly by blowing air through your pursed lips for a count of 4.</string>
    <string name="diaphragmaticbreathingdesc">Lie on your back with your knees slightly bent and your head on a pillow.Place one hand on your upper chest and one hand below your rib cage. Slowly inhale through your nose. Keep your other hand as still as possible.Exhale using pursed lips as you tighten your abdominal muscles, keeping your upper hand completely still.</string>
</resources>