<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_fragment">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/bmibtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scrbutton"
                android:text="@string/bmi"
                android:textColor="#606060"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/bmrbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scrbutton"
                android:text="@string/bmr"
                android:textColor="#606060"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                />
            <Button
                android:id="@+id/yogabtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scrbutton"
                android:text="@string/yoga"
                android:textColor="#606060"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/exebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scrbutton"
                android:text="@string/exercise"
                android:textColor="#606060"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/walkbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scrbutton"
                android:text="walk and steps"
                android:textColor="#606060"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/waterbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/scrbutton"
                android:text="@string/water"
                android:textColor="#606060"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>




        </LinearLayout>



    </HorizontalScrollView>





</FrameLayout>